<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    android:elevation="@dimen/_32sdp"
    android:layout_marginBottom="@dimen/_16sdp"
    >
    <TextView
        android:id="@+id/tv_sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"
        />
    <View
        android:id="@+id/lined_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_by"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        />
    <FrameLayout
        android:id="@+id/new_to_old"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lined_view"

    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_created_new"
            android:autoSizeTextType="uniform"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/old_to_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_to_old"
        android:layout_margin="@dimen/_16sdp"

        >
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/date_created_old"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"

            />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/A_to_Z"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_to_new"
        android:layout_margin="@dimen/_16sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/name_A_Z"
            android:textColor="@color/black"
            android:layout_gravity="start|center_vertical"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"

            />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/Z_to_A"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/A_to_Z"
        android:layout_margin="@dimen/_16sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_Z_A"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/black"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"

            />

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>