<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layoutDirection="ltr"
    tools:context=".SearchActivity"
    android:layout_marginTop="@dimen/_8sdp"
    android:focusableInTouchMode="true"
    android:focusable="true"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_156sdp"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:paddingBottom="@dimen/_10sdp"

        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:minHeight="@dimen/_40sdp"
            app:statusBarScrim="@color/fui_transparent"
            android:paddingTop="@dimen/_5sdp"

            >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/x_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:src="@drawable/ic_cancel"
                    app:fabSize="mini"
                    app:layout_collapseMode="parallax"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:backgroundTint="#F2F2F2"
                    android:tint="@color/black"
                    app:elevation="0dp"
                    android:outlineProvider="none"
                    app:tint="@color/black"
                    style="@style/Widget.Material3.FloatingActionButton.Primary"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:text="@string/search"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    app:layout_collapseMode="parallax"
                    android:autoSizeTextType="uniform"
                    android:layout_marginTop="@dimen/_8sdp"

                    />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                app:layout_collapseMode="pin"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                >
                <View
                    android:id="@+id/spacer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@color/white"

            />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sr_TextInputLayout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconDrawable="@drawable/ic_search"
                app:endIconTint="#BDBDBD"
                app:hintEnabled="false"
                android:layout_below="@id/spacer"
                app:boxBackgroundColor="#F2F2F2"
                app:startIconDrawable="@drawable/ic_search"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:layout_gravity="bottom"
                    android:textSize="@dimen/_10ssp"

                    />

            </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true"
        >
    <TextView
        android:id="@+id/empty_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/search_for_note"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/guideline20"
        android:textSize="@dimen/_12ssp"

        />
        <TextView
            android:id="@+id/empty2_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:text="@string/type_into_box"
            android:textColor="@color/gray"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/empty_txt"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"
    />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_16sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteX="16dp"
        android:visibility="invisible"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>